# literature-management-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LiteratureManagementTool.spec  README.md  main.py  pyproject.toml
.github/workflows/: build-windows-release.yml
docs/: UI_Refactoring_PRD.md
docs/releases/: v0.2.2-zh.md  v0.2.3-zh.md  v0.3.0-zh.md  v0.3.1-zh.md  v0.3.2-zh.md  v0.3.3-zh.md  v1.0.0-zh.md  v1.1.0-zh.md  v1.1.1-zh.md
installer/: LiteratureManagementTool.iss
literature_manager/: __init__.py  app.py  config.py  db.py  dedupe_service.py  desktop.py  export_service.py  import_service.py  maintenance_service.py  metadata_fields.py  metadata_service.py  ocr_service.py  qt_app.py  table_columns.py  ui.py  update_service.py  utils.py
literature_manager/controllers/: __init__.py  library_controller.py
literature_manager/models/: __init__.py  literature_table_model.py
literature_manager/viewmodels/: __init__.py  main_window_viewmodel.py
literature_manager/views/: __init__.py  async_worker.py  main_window.py  theme.py
literature_manager/views/components/: __init__.py  search_bar.py  toast.py
literature_manager/views/dialogs/: __init__.py  attachment_dialog.py  column_settings_dialog.py  settings_dialog.py  tool_dialogs.py
scripts/: build_windows.ps1  render_github_assets.py
tests/: test_controllers.py  test_desktop.py  test_qt_main_window.py  test_qt_model.py  test_qt_viewmodel.py  test_utils.py  test_v25_services.py  test_v2_features.py  test_v2_workflows.py
