[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-manager"
version = "0.2.0"
description = "离线优先的本地文献管理软件"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenCode" }]
dependencies = ["pypdf>=4.0"]

[project.scripts]
literature-manager = "literature_manager.app:main"

[tool.setuptools]
packages = ["literature_manager"]
