[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-management-tool"
version = "0.4.0"
description = "Literature management tool for local-first reference management"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenCode" }]
dependencies = ["pypdf>=4.0", "Pillow>=10.0", "PySide6>=6.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]
fluent = ["PyQt-Fluent-Widgets>=1.5"]

[project.scripts]
literature-management-tool = "literature_manager.app:main"

[tool.setuptools.packages.find]
include = ["literature_manager*"]
